# SIEM-system

./: .gitignore  allfiles.txt  create_admin.py  generate_test_logs.py  package-lock.json  package.json  siem.db
backend/: .env.docker  .env.example  DEPLOYMENT.md  Dockerfile  QUICK_START.md  SYSTEM_LOG_TEST.md  TEST_SYSTEM_COLLECT.md  create_operator.py  create_test_admin.py  docker-compose.yml  generate_realtime_logs.py  migrate_add_incident_status.py  pyproject.toml  requirements.txt  siem.db  siem.db-shm  siem.db-wal
backend/siem_backend/: main.py
backend/siem_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/siem_backend/api/: auth.py  router.py
backend/siem_backend/api/routes/: analyze.py  auth.py  collect.py  events.py  incidents.py  notifications.py  profile.py  users.py
backend/siem_backend/api/schemas/: events.py  incidents.py  notifications.py
backend/siem_backend/core/: config.py  logging.py
backend/siem_backend/data/: db.py  event_repository.py  incident_repository.py  initial_data.py  models.py  models_user.py  notification_repository.py  user_repository.py
backend/siem_backend/scripts/: create_users.py  migrate_to_postgres.py
backend/siem_backend/services/: advice.py  analysis_engine.py  event_formatter.py  event_service.py  incident_service.py  normalization.py  notifications.py  scheduler.py  system_log_exporter.py
backend/siem_backend/services/analysis/: base.py  engine.py  types.py
backend/tests/: README.md  __init__.py  mocks.py  test_analysis_rules.py  test_integration.py  test_notifications.py
frontend/: main.js  (+3 more)
(+11 files in other folders)
