[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siem-backend"
version = "0.1.0"
description = "Local SIEM backend for small enterprises"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["siem_backend*"]
